     which version came first, second, third, etc.)  So you can throw
     a pile of archives at it without having to think about putting
     them in a certain order (See POD for details).

     A Pinto repository can now be used with the cpan[1] utility.  It
     should also work with cpanp[1], but I haven't tried it.  And of
     course it still works with cpanm[1].

     Pinto does the-right-thing with development packages and
     distributions (See POD for details).

     Each Pinto repository now has a 'devel' configuration parameter.
     Setting this to a true value instructs Pinto to include
     development releases in the index.  The default is false.

     The 'create' command for pinto-admin now accepts options to set
     the parameters in the config file that will be generated for the
     new repository.

     The 'list' command for pinto-admin now accepts a --format option
     that can be used to customize what/how information is displayed.

     The 'remove' command for pinto-admin now works for both foreign
     and local distributions.  However, there is a caveat when
     removing foreign distributions (See POD for details).

     The 'rebuild' command for pinto-admin now has a --recompute
     option that causes Pinto to recompute the 'latest' version
     of all the packages (See POD for details).

     pinto-admin now has a 'manual' command for displaying the full
     manual for a particular command.

     pinto-admin now has a 'version' command for displaying version
     information.

     pinto-admin now has a 'purge' command that removes everything
     from your repository.

     Most of the pinto-admin commands now have aliases.  Thanks to the
     awesomeness of App::Cmd, you can say 'pinto-admin up' instead of
     'pinto-admin update' or 'pinto-admin rm' instead of 'pinto-admin
     remove'.  The aliases are listed in the manual for each command.

     * Other Changes:
