@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More (tests => 43);
+use Test::More (tests => 8);
 
 use Path::Class;
 use FindBin qw($Bin);
@@ -12,32 +12,41 @@ use Pinto::Tester;
 
 #------------------------------------------------------------------------------
 
-my $fakes     = dir( $Bin, qw(data ineligible fakes) );
-my $source    = URI->new("file://$fakes");
-my $auth_dir  = $fakes->subdir( qw(authors id L LO LOCAL) );
-my $dist_name = 'FooOnly-0.01.tar.gz';
-my $archive   = $auth_dir->file($dist_name);
-
-# A local author...
-my $LOCAL1 = 'LOCAL1';
-
-# This is a bit confusing.  CPAN::Faker creates all the packages under
-# the author 'LOCAL'.  But we are treating the fake CPAN as a
-# foreign source.  So the author seems "foreign" to Pinto, but is
-# "local" to the fake CPAN.  Just pretend you didn't see this next line.
-my $FOREIGN = 'LOCAL';
+my $dists_dir = dir( $Bin, qw(data ineligible dists) );
+my $LOCAL = 'LOCAL';
+my $archive;
 
 #------------------------------------------------------------------------------
 # Setup...
 
-my $t = Pinto::Tester->new(creator_args => {source => $source});
+my $t = Pinto::Tester->new();
 my $pinto = $t->pinto();
 
 #------------------------------------------------------------------------------
-# Updating from a foreign repository...
 
 $pinto->new_batch();
-$pinto->add_action('Update');
+$archive = $dists_dir->file('Invalid-Dist-Version-1.0.BOGUS.tar.gz');
+$pinto->add_action('Add', archive => $archive);
+$t->result_ok( $pinto->run_actions() );
+like $t->bufferstr(), qr/ineligible for indexing: Illegal version/;
+$t->reset_buffer();
+
+#------------------------------------------------------------------------------
+
+my $part1 = 'Unsortable-Part1-1.0.tar.gz';
+my $part2 = 'Unsortable-Part2-2.0.tar.gz';
+
+$pinto->new_batch();
+$pinto->add_action('Add', author => $LOCAL, archive => $dists_dir->file($part1));
+$pinto->add_action('Add', author => $LOCAL, archive => $dists_dir->file($part2));
 $t->result_ok( $pinto->run_actions() );
 
-print $t->bufferstr();
+like $t->bufferstr(), qr/ineligible for indexing: Cannot compare distributions/;
+
+$t->dist_exists_ok($part1, $LOCAL);
+$t->package_is_latest_ok('Baz', $part1, $LOCAL);
+
+$t->dist_exists_ok($part2, $LOCAL);
+$t->package_not_latest_ok('Baz', $part2, $LOCAL);
+
+
