@@ -1,11 +1,0 @@
-File:         02packages.details.txt
-URL:          file:///Users/jeff/Development/Pinto/Pinto-Core/t/data/ineligible/fakes/modules/02packages.details.txt.gz
-Description:  Package names found in directory $CPAN/authors/id/
-Columns:      package name, version, path
-Intended-For: Automated fetch routines, namespace documentation.
-Written-By:   CPAN::Faker version 0.007
-Line-Count:   2
-Last-Updated: Wed Oct  5 22:29:01 2011 GMT
-
-Bar,LOCAL,f
-Foo,LOCAL,f
