@@ -1,7 +1,7 @@
 ---
-name: Invalid-Dist-Version
-version: 1.0.BOGUS
-abstract: This dist has an invalid version
+name: Unsortable-Part1
+version: 1.0
+abstract: This dist has same package as another dist with different dist name
 author:
   - SUZY <SUZY@cpan.local>
 generated_by: Module::Faker version 
@@ -10,6 +10,6 @@ meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
   version: 1.3
 provides:
-  Foo:
-    file: lib/Foo.pm
-    version: 0.01
+  Baz:
+    file: lib/Baz.pm
+    version: 1.0
