@@ -1,7 +1,7 @@
 ---
-name: Bar
-version: 1.0
-abstract: This dist has a package with an invalid version
+name: Unsortable-Part2
+version: 2.0
+abstract: This dist has same package as another dist with a different dist name
 author:
   - SUZY <SUZY@cpan.local>
 generated_by: Module::Faker version 
@@ -10,6 +10,6 @@ meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
   version: 1.3
 provides:
-  Bar:
-    file: lib/Bar.pm
-    version: BOGUS
+  Baz:
+    file: lib/Baz.pm
+    version: 1.0
